// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRemoteScreenshotConfiguration loads the config for branch 1`] = `
Object {
  "publishScreenshotConfiguration": Object {
    "referenceScreenshotsPath": "/app/tests/wdio/__snapshots__/reference",
    "serviceAuthHeader": "Basic dXNlcm5hbWU6cGFzc3dvcmQ=",
    "serviceUrl": "https://github.com/cerner/terra-toolkit.git/content-compressed/com.cerner.cerner/terra-functional-testing/build-screenshots/dev/",
    "url": "https://github.com/nexus/content/sites/terra-toolkit.git/com.cerner.cerner/terra-functional-testing/build-screenshots/dev/",
    "zipFilePath": "/app/tests/wdio",
  },
}
`;

exports[`getRemoteScreenshotConfiguration loads the default config 1`] = `
Object {
  "publishScreenshotConfiguration": Object {
    "referenceScreenshotsPath": "/app/tests/wdio/__snapshots__/reference",
    "serviceAuthHeader": "Basic dXNlcm5hbWU6cGFzc3dvcmQ=",
    "serviceUrl": "https://github.com/cerner/terra-toolkit.git/content-compressed/com.cerner.cerner/terra-functional-testing/build-screenshots/master/",
    "url": "https://github.com/nexus/content/sites/terra-toolkit.git/com.cerner.cerner/terra-functional-testing/build-screenshots/master/",
    "zipFilePath": "/app/tests/wdio",
  },
}
`;

exports[`getRemoteScreenshotConfiguration throws an error with a bad site 1`] = `"The repository url is malformed: http://www.badsite.com"`;
